# variant-calling

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: alignment.sam  var.vcf
src/: cigar_parser.hpp  fasta_reader.hpp  main.cpp  sam_parser.hpp  types.hpp  variant_caller.hpp
